# esp32-iot-azure

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Rename-Project.ps1  partitions.csv  sdkconfig.defaults  sonar-project.properties
.github/ISSUE_TEMPLATE/: bug-report.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: build.yml  development.yml  release.yml
components/component_name/: CMakeLists.txt  Kconfig
components/component_name/include/component_name/: component_name.h
components/component_name/private_include/: assertion.h  config.h  log.h
components/component_name/src/: component_name.c
components/component_name/test/: CMakeLists.txt
components/esp32_iot_azure/: CMakeLists.txt  Kconfig  idf_component.yml
components/esp32_iot_azure/.sdk/config/: azure_iot_config.h  core_http_config.h  core_mqtt_config.h
components/esp32_iot_azure/cmake/: azure-freertos-middleware.cmake  azure-sdk-for-c.cmake  core-mqtt.cmake
components/esp32_iot_azure/include/esp32_iot_azure/: azure_iot_adu.h  azure_iot_adu_workflow.h  azure_iot_common.h  azure_iot_flash_platform_port.h  azure_iot_http_client.h  azure_iot_hub.h  azure_iot_provisioning.h
components/esp32_iot_azure/include/esp32_iot_azure/extension/: azure_iot_adu_extension.h  azure_iot_http_client_extension.h  azure_iot_hub_client_properties_extension.h  azure_iot_hub_extension.h  azure_iot_json_reader_extension.h  azure_iot_json_writer_extension.h  azure_iot_message_extension.h  azure_iot_provisioning_extension.h
components/esp32_iot_azure/include/esp32_iot_azure/port/: azure_iot_flash_platform_port.h
components/esp32_iot_azure/private_include/: assertion.h  config.h  log.h
components/esp32_iot_azure/private_include/infrastructure/: azure_adu_root_key.h  azure_certificate.h  azure_iot_certificate.h  azure_transport_interface.h  crypto.h  static_memory.h  time.h  transport.h
components/esp32_iot_azure/src/: azure_iot_adu.c  azure_iot_adu_workflow.c  azure_iot_common.c  azure_iot_http_client.c  azure_iot_hub.c  azure_iot_provisioning.c  azure_iot_sdk.c
components/esp32_iot_azure/src/extension/: azure_iot_adu_extension.c  azure_iot_http_client_extension.c  azure_iot_hub_extension.c  azure_iot_json_reader_extension.c  azure_iot_json_writer_extension.c  azure_iot_message_extension.c  azure_iot_provisioning_extension.c
components/esp32_iot_azure/src/infrastructure/: azure_adu_root_key.c  azure_iot_certificate.c  azure_transport_interface.c  crypto.c  static_memory.c  time.c  transport.c
components/esp32_iot_azure/src/port/: azure_iot_flash_platform_port.c
docs/: CONTRIBUTING.md
docs/wiki/: how_to_use.md
main/: CMakeLists.txt  main.c
main/dtdl/: temperaturecontroller-1.json  temperaturecontroller.h
main/examples/: example_iot_hub.c  example_iot_hub.h  example_provisioning.c  example_provisioning.h
main/examples/adu/: example_adu.c  example_adu.h
main/examples/dtdl/: TemperatureController.json  thermostat.json
main/examples/iot_hub/: example_iot_hub.c  example_iot_hub.h
main/examples/provisioning/: example_provisioning.c  example_provisioning.h
main/helper/: dns_helper.c  dns_helper.h  nvs_helper.c  nvs_helper.h  sntp_helper.c  sntp_helper.h  wifi_helper.c  wifi_helper.h
test/: CMakeLists.txt  sdkconfig.defaults
test/main/: CMakeLists.txt  test_runner.c
